switched to bibtex bibliography

--- a/Standard/dol_isov2_conversion.tex
+++ b/Standard/dol_isov2_conversion.tex
@@ -65,7 +65,7 @@
 %% \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace} %
 %% \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace} %
 
-
+\usepackage{isobib} 
 \usepackage{pdflscape}
 
 \usepackage[show]{ed}
@@ -466,7 +466,7 @@ author=,date=,id=,replyto=,type=}{}%
 \renewcommand{\refname}{}
 \renewcommand{\isourl}[1]{\texttt{<}\url{#1}\texttt{>}}
 \renewcommand{\aref}[1]{\annexrefname~\ref{#1}}
-%\renewcommand{\bref}[1]{[\ref{#1}]}
+\renewcommand{\bref}[1]{\cite{#1}}
 \renewcommand{\cref}[1]{\clauserefname~\ref{#1}}
 \renewcommand{\eref}[1]{\examplerefname~\ref{#1}}
 \renewcommand{\fref}[1]{\figurerefname~\ref{#1}}
@@ -13142,188 +13142,11 @@ Let $C$ and $D$ be two categories. A \emph{functor} $F: C \to D $ is a mapping t
 
 \begin{center}\hrule\end{center}
 
-\bibannex{Bibliography}
-\begin{references}
-  \reference{J.~Ad\'{a}mek, H.~Herrlich, and G.~Strecker,}{\em Abstract and Concrete Categories,}{Wiley, New York, 1990.} \label{AHS}
-  
-  \reference{Kenneth~J. Bagstad, Ferdinando Villa, Gary~W. Johnson, and B.~Voigt,}{ARIES – artificial intelligence for ecosystem services: A guide
-  to models and data,}{version 1.0. ock Technical Report~1, ARIES, 2011, \url{http://ariesonline.org/docs/ARIESModelingGuide1.0.pdf}.} \label{bagstad_aries_2011}
-  
-   \reference{T.~Berners-Lee, R.~Fielding, and L.~Masinter,}{Uniform Resource Identifier (URI): Generic Syntax,}{RFC 3986 (INTERNET STANDARD), January 2005.
-   Updated by RFCs 6874, 7320.}\label{rfc3986}
-% 
-   \reference{A.~Borgida and L.~Serafini,}{Distributed description logics: Assimilating information from peer sources,}{{\em Journal of Data Semantics}, 1:153--184, 2003.}\label{borgida6}
-% 
-   \reference{Diego Calvanese, Giuseppe~De Giacomo, Domenico Lembo, Maurizio Lenzerini, Antonella Poggi, Mariano Rodriguez-Muro, Riccardo Rosati, Marco Ruzzi, and
-   Domenico~Fabio Savo,}{The mastro system for ontology-based data access,}{{\em Semantic Web}, 2(1):43--53, 2011.}\label{CalvaneseEtAl11}
-% 
-   \reference{W.A. Carnielli, M.~Coniglio, D.M. Gabbay, P.~Gouveia, and C.~Sernadas,}{Analysis and synthesis of logics: how to cut and paste reasoning systems,}   {{\em Applied logic series}, Springer, 2008.}\label{carnielli2008analysis}
-% 
-   \reference{M.~Codescu and T.~Mossakowski,}{Heterogeneous colimits,}{In F.~Boulanger, C.~Gaston, and P.-Y. Schobbens, editors, {\em MoVaH'08 Workshop on Modeling, Validation and Heterogeneity}, IEEE press, 2008.}\label{weakcol}
-% 
-   \reference{Mihai Codescu, Fulya Horozal, Michael Kohlhase, Till Mossakowski, and Florian Rabe,}{Project abstract: Logic atlas and integrator (latin),}{In James~H. Davenport, William~M. Farmer, Josef Urban, and Florian Rabe, editors, {\em Intelligent Computer Mathematics 18th Symposium}, Calculemus 2011, and 10th International Conference, MKM 2011, Bertinoro, Italy, July 18-23, 2011. Proceedings, volume 6824 of {\em Lecture Notes in Computer Science}, pages 289--291. Springer-Verlag Berlin Heidelberg, 2011.}\label{CodescuEtAl2011d}
-% 
-   \reference{Mihai Codescu, Till Mossakowski, and Oliver Kutz,}{A categorical approach to ontology alignment,}{In {\em Proc. of the 9th International Workshop on Ontology Matching (OM-2014)}, ISWC-2014, Riva del Garda, Trentino, Italy., CEUR-WS online proceedings, 2014.}\label{OM2014}
-% 
-   \reference{CoFI (The Common Framework Initiative),}{\em \textsc{Casl} Reference Manual,}{Lect. Notes Comp. Sci.2960 (IFIP Series). Springer, 2004.}\label{CASL-RM}
-% 
-   \reference{European Comission,}{INSPIRE},{Geoportal: Enhancing access to European spatial data, 2014, \url{http://inspire-geoportal.ec.europa.eu/}}.\label{european_comission_inspire_2014}
-% 
-   \reference{Information technology ---}{Common Logic}{({CL}): a framework for a family of logic-based languages, Technical Report 24707:2007, ISO/IEC, 2007,  \url{http://iso-commonlogic.org}.}\label{CommonLogic:oldfashioned}
-% 
-   \reference{D.~Crocker and P.~Overell,}{Augmented BNF for Syntax Specifications: ABNF,}{RFC 5234 (INTERNET STANDARD), January 2008, Updated by RF 7405.}\label{rfc5234}
-% 
-   \reference{J{\'{e}}r{\^{o}}me David, J{\'{e}}r{\^{o}}me Euzenat, Fran{\c{c}}ois Scharffe, and C{\'{a}}ssia~Trojahn dos Santos,}{The alignment {API} 4.0,}{{\em Semantic Web}, 2(1):3--10, 2011.}\label{AlignmentAPI}
-% 
-   \reference{R{\u{a}}zvan Diaconescu, Joseph Goguen, and Petros Stefaneas,}{Logical support for modularisation,}{In Gerard Huet and Gordon Plotkin, editors, {\em Proceedings of a Workshop on Logical Frameworks}, 1991,}\label{DGS91}
-% 
-   \reference{M.~Duerst and M.~Suignard,}{Internationalized Resource Identifiers (IRIs),}{RFC 3987 (Proposed Standard), January 2005.}\label{rfc3987}
-% 
-   \reference{J{\'e}r{\^o}me Euzenat and Pavel Shvaiko,}{\em Ontology Matching,}{Second Edition, Springer, 2013.}\label{DBLP:books/daglib/0032976}
-% 
-   \reference{R.~Fielding, J.~Gettys, J.~Mogul, H.~Frystyk, L.~Masinter, P.~Leach, and T.~Berners-Lee,}{Hypertext Transfer Protocol -- HTTP/1.1, }{RFC 2616 (Draft Standard), June 1999, Obsoleted by RFCs 7230, 7231, 7232, 7233, 7234, 7235, updated by RFCs 2817, 5785, 6266, 6585.}\label{rfc2616}
-% 
-   \reference{J.~A. Goguen and R.M. Burstall,}{A study in the foundations of programming methodology: Specifications, institutions, charters and parchments,}{{\em In: Category Theory and Computer Programming}, D. Pitt et al.(eds.), pp. 313--333, no.\ 240 in LNCS, Springer, 1985.}\label{CharPar}
-% 
-   \reference{Joseph~A. Goguen and Rod~M. Burstall,}{Institutions: Abstract model theory for specification and programming, }{{\em J. ACM}, 39:95--146, 1992.}\label{GoguenBurstall92}
-% 
-   \reference{Joseph~A. Goguen and Grigore Rosu, }{Composing hidden information modules over inclusive institutions,}{In Olaf Owe, Stein Krogdahl, and Tom Lyche, editors, {\em From Object-Orientation to Formal Methods, Essays in Memory of Ole-Johan Dahl}, volume 2635 of {\em Lecture Notes in Computer Science}, pages 96--123.
-   Springer, 2004.}\label{DBLP:conf/birthday/GoguenR04}
-% 
-   \reference{B.~Cuenca Grau, I.~Horrocks, Y.~Kazakov, and U.~Sattler,}{Just the right amount: Extracting modules from ontologies,}{In {\em Proc.\ 16th Int. World Wide Web Conf.\ (WWW)}, pages 717--726, 2007.}\label{CuencaGrauEtAl:ExtractingModulesOntologies2007}
-%   
-   \reference{Object~Management Group,}{Ontology, model and specification integration and interoperability request for proposal,}{\em OMG Document Number ad/13-12-02, 2013.}\label{RFP}
-% 
-   \reference{W3C OWL~Working Group,}{Owl 2 web ontology language manchester syntax,}{{\em W3C Working Group Note}, 27 October 2009, \url{http://www.w3.org/TR/2009/NOTE-owl2-manchester-syntax-20091027/}, 2009.}\label{W3C:NOTE-owl2-manchester-syntax-20091027}
-% 
-   \reference{W3C OWL~Working Group,}{Owl 2 web ontology language: Rdf-based semantics,}{{\em W3C Recommendation}, 27 October 2009, \url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/},2009.}\label{W3C:REC-owl2-rdf-based-semantics-20091027}
-% 
-   \reference{W3C OWL~Working Group,}{Owl 2 web ontology language: {XML} serialization (second edition),}{{\em W3C Recommendation}, 11 December 2012,  \url{http://www.w3.org/TR/2012/REC-owl2-xml-serialization-20121211/}, 2012.}\label{W3C:REC-owl2-xml-serialization-20121211}
-% 
-   \reference{W3C RDF Core~Working Group,}{RDF 1.1 {XML} syntax,}{{\em W3C Recommendation}, 25 February 2014, \url{http://www.w3.org/TR/2014/REC-rdf-syntax-grammar-20140225/}, 2014.}\label{W3C:REC-rdf-syntax-grammar-20140225}
-% 
-   \reference{W3C Semantic Web Deployment~Working Group,}{Best practice recipes for publishing rdf vocabularies,}{{\em W3C Working Group Note}, 28 August 2008,
-   \url{http://www.w3.org/TR/2008/NOTE-swbp-vocab-pub-20080828/}, 2008.}\label{W3C:NOTE-swbp-vocab-pub-20080828}
-% 
-   \reference{I.~Horrocks, O.~Kutz, and U.~Sattler,}{The Even More Irresistible $\mathcal{SROIQ}$.,}{In Patrick Doherty, John Mylopoulos, and Christopher Welty, editors, {\em Proc.\ of the 10th International Conference on Principles of Knowledge Representation and Reasoning (KR-06)}, AAAI Press, 2006.}\label{SROIQ}
-%   
-   \reference{Yazmin~Angelica Ibanez, Till Mossakowski, Andrzej Tarlecki, and Don Sannella,}{Modularity of ontologies in an arbitrary institution,}{In Narciso Marti-Oliet et~al., editor, {\em Logic, Rewriting, and Concurrency: A Festschrift Symposium in Honor of José Meseguer}, Lecture Notes in Computer Science. Springer, 2015.
-   To appear.}\label{IbanezEtAl15}
-% 
-   \reference{C.~M. Keet, F.C. Fern\'andez-Reyes, and A.~Morales-Gonz\'alez,}{Representing mereotopological relations in owl ontologies with ontoparts,}{In {\em Proceedings of the 9th Extended Semantic Web Conference (ESWC'12)}, 29-31 May 2012, Heraklion, Crete, Greece, volume 7295 of {\em Lecture Notes in Computer Science}, pages 240--254. Springer, 2012.}\label{KeetEtAl12}
-% 
-   \reference{Z.~Khan and C.~M. Keet,}{Addressing issues in foundational ontology mediation,}{In J.~Filipe and J.~Dietz, editors, {{\em 5th International Conference
-   on Knowledge Engineering and Ontology Development (KEOD'13)}, Vilamoura, Portugal, 19-22 September}, pages 5--16. SCITEPRESS, 2013.}\label{KhanKeet13}
-% 
-   \reference{M.~Kifer, G.~Lausen, and J.~Wu,}{Logical foundations of object-oriented and frame-based languages,}{{\em Journal of the ACM}, 42:741--843, 1995.}\label{flogic}
-% 
-   \reference{Alexander Knapp, Till Mossakowski, and Markus Roggenbach,}{An Institutional Framework for Heterogeneous Formal Development,}{in
-   UML, 2014, CoRR abs/1403.7747.}\label{knapp-mossakowski-roggenbach:corr:2014}
-% 
-   \reference{Alexander Knapp and Jochen Wuttke,}{Model checking of {UML} 2.0 interactions,}{In Thomas Kühne, editor, {\em Reports Rev. Sel. Papers Wsh.s Symp.s
-   MoDELS 200}, number 4364 in Lect. Notes Comp. Sci., pages 42--51. Springer, 2007.}\label{knapp-wuttke:models06wsh:2007}
-% 
-   \reference{Roman Kontchakov, Frank Wolter, and Michael Zakharyaschev,}{Logic-based ontology comparison and module extraction with an application to DL-Lite,}
-   {{\em Artif. Intell.}, 174(15):1093--1141, 2010.}\label{DBLP:journals/ai/KontchakovWZ10}
-% 
-   \reference{O.~Kutz, C.~Lutz, F.~Wolter, and M.~Zakharyaschev,}{$\mathcal{E}$-connections of {A}bstract {D}escription {S}ystems,}{{\em Artificial Intelligence}, 156(1):1--73, 2004.}\label{Kutzetal04}
-% 
-   \reference{O.~Kutz, T.~Mossakowski, J.~Hois, M.~Bhatt, and J.~Bateman,}{Ontological Blending in DOL,}{In Tarek Besold, Kai-Uwe Kuehnberger, Marco Schorlemmer, and Alan Smaill, editors, {\em Computational Creativity, Concept Invention, and General Intelligence, Proc.\ of the 1st Int.\ Workshop C3GI@ECAI}, volume 01-2012, Montpellier, France, August~27 2012. Publications of the Institute of Cognitive Science, Osnabr{\"u}ck.}\label{blendingc3gi12}
-%   
-   \reference{O.~Kutz, T.~Mossakowski, and D.~L\"ucke,}{Carnap, Goguen, and the Hyperontologies: Logical Pluralism and Heterogeneous Structuring in Ontology Design,}
-    {{\em Logica Universalis}, 4(2):255--333, 2010, Special Issue on `Is Logic Universal?'.}\label{hyper2010}
-%   
-   \reference{D.~Kutz, I.~Normann, T.~Mossakowski, and D.~Walther,}{Chinese Whispers and Connected Alignments,}{In {\em Proc.\ of the 5th International Workshop on Ontology Matching (OM-2010)}, 9th International Semantic Web Conference ISWC-2010, November 7, 2010, Shanghai, China., 2010.}\label{KutzEtAl:ChineseWhispers2010}
-% 
-   \reference{C.~Lange, T.~Mossakowski, O.~Kutz, C.~Galinski, M.~Gr\"uninger, and D.~Couto Vale,}{The Distributed Ontology Language (DOL): Use Cases, Syntax, and
-   Extensibility,}{ In {\em Proc.\ of the 10th Terminology and Knowledge Engineering Conference (TKE 2012)}, Madrid, Spain, 2012.}\label{DOL-TKE2012}
-%   
-   \reference{Christoph Lange, Till Mossakowski, and Oliver Kutz,}{LoLa: A modular ontology of logics, languages, and translations,}{In Thomas Schneider and Dirk Walther, editors, {\em Modular Ontologies}, number 875 in CEUR Workshop Proceedings, Aachen, 2012.}\label{LMK:LoLaModularOntologyLogLangTrans12}
-% 
-   \reference{Berners-T. Lee.,}{Design issues: Linked data,}{27 July 2006, \url{http://www.w3.org/DesignIssues/LinkedData.html}, 2006.}\label{BernersLee:LinkedData2006}
-% 
-   \reference{V.~Lifschitz,}{Circumscription,}{In {\em Handbook of Logic in Artificial Intelligence and Logic Programming, Volume 3}, pages 297--352. Oxford University Press, 1994.}\label{circ2}
-% % 
-    \reference{D.~Lucanu, Y.-F. Li, and J.~Song Dong,}{Semantic web languages --- towards an institutional perspective,}{{\em In: Essays Dedicated to Joseph A. Goguen}, Lecture Notes in Computer Science 4060 Springer 2006, p. 99--123, 2006.}\label{Lucanu}
-% % 
-    \reference{Carsten Lutz, Dirk Walther, and Frank Wolter,}{Conservative extensions in expressive description logics,}{In Manuela~M. Veloso, editor, {\em IJCAI,} 2007, Proceedings of the 20th International Joint Conference on Artificial Intelligence, Hyderabad, India, January 6-12, 2007, pages 453--458, 2007.}\label{DBLP:conf/ijcai/LutzWW07}
-% % 
-    \reference{Carsten Lutz and Frank Wolter,}{Foundations for uniform interpolation and forgetting in expressive description logics,}{In Toby Walsh, editor, {\em IJCAI}, pages 989--995. IJCAI/AAAI, 2011.}\label{DBLP:conf/ijcai/LutzW11}
-% 
-   \reference{S.~{Mac Lane},}{Categories for the Working Mathematician,}{Springer, 1998, Second edition.}\label{MacLane}
-% 
-   \reference{C.~Masolo, S.~Borgo, A.~Gangemi, N.~Guarino, and A.~Oltramari,}{Descriptve ontology for linguistic and cognitive engineering,}{\em \url{http://www.loa.istc.cnr.it/DOLCE.html}.}\label{dolce-web}
-% 
-   \reference{C.~Masolo, S.~Borgo, A.~Gangemi, N.~Guarino, and A.~Oltramari,}{Ontology library,}{{\em WonderWeb Deliverable, Report No.\ 18 of the Laboratory for
-   Applied Ontology} -- ISTC-CNR, Dec.\ 2003. \url{http://www.loa-cnr.it/Papers/D18.pdf, 2003.}}\label{dolce}
-% 
-   \reference{J.~McCarthy,}{Circumscription: A Form of Non-monotonic Reasoning,}{{\em Artificial Intelligence}, 13:27–39, 1980.}\label{circ1}
-% 
-   \reference{Jos\'e Meseguer,}{General logics,}{In {\em Logic Colloquium 87}, pages 275--329, 1989.}\label{Meseguer89}
-% 
-   \reference{T.~Mossakowski, M.~Codescu, F.~Neuhaus, and O.~Kutz,}{{\em The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II},} {chapter: The distributed ontology, modelling and specification language - DOL, Studies in Universal Logic. Birkh\"auser, 2015.} \label{JYB-Festschrift2015-DOL}
-% % 
-    \reference{T.~Mossakowski and O.~Kutz,}{The Onto-Logical Translation Graph,}{In {\em Modular Ontologies---Proceedings of the Fifth International Workshop (WoMO 2011)}, volume 230 of {\em Frontiers in Artificial Intelligence and Applications}, pages 94--109. IOS Press, 2011.}\label{OntoGraph}
-% % 
-    \reference{Till Mossakowski,}{Relating {\CASL} with Other Specification Languages: the Institution Level,}{{\em Theoretical Computer Science}, 286:367--475, 2002.}\label{Mossakowski02}
-% 
-   \reference{Till Mossakowski, Mihai Codescu, Oliver Kutz, Christoph Lange, and Michael Gruninger,}{Proof support for common logic,}{In {\em Proc. Wsh. Automated Reasoning for Quantified Non-Classical Logic (ARQNL)}, 2014.}\label{MossakowskiEtAl14b}
-% 
-   \reference{Till Mossakowski, Ulf Krumnack, and Tom Maibaum,}{What is a derived signature morphism?,}{In R.~Diaconescu, M.~Codescu, and I.~Tutu, editors, {\em WADT 2014}, Lecture Notes in Computer Science. Springer, 2015, To appear.}\label{MossakowskiEtAl15a}
-% 
-   \reference{Till Mossakowski, Oliver Kutz, Mihai Codescu, and Christoph Lange,}{The Distributed Ontology, Modeling and Specification Language,}{In Chiara Del~Vescovo et~al., editor, {\em Proceedings of the 7th International Workshop on Modular Ontologies (WoMO-13)}, volume 1081, CEUR-WS, 2013.}\label{womo13}
-% 
-   \reference{Till Mossakowski, Christoph Lange, and Oliver Kutz,}{Three Semantics for the Core of the Distributed Ontology Language,}{In Maureen Donnelly and Giancarlo Guizzardi, editors, {\em 7th International Conference on {F}ormal {O}ntology in {I}nformation {S}ystems(FOIS)}, volume 239 of {\em {F}rontiers in {A}rtificial {I}ntelligence and {A}pplications}, pages 337--352. {IOS} {P}ress, 2012, {FOIS Best Paper Award}.}\label{DOL-3semantics}
-% 
-   \reference{Till Mossakowski and Lutz {Schr\"oder},}{On inconsistency and unsatisfiability,}{{\em Int J Software Informatics}, 9(2), 2015.}\label{Inconsistency}
-% 
-   \reference{Till Mossakowski and Andrzej Tarlecki,}{Heterogeneous logical environments for distributed specifications,}{In Andrea Corradini and Ugo Montanari, editors, {\em WADT 2008}, number 5486 in Lecture Notes in Computer Science, pages 266--289. Springer, 2009.}\label{MossakowskiTarlecki09}
-% 
-   \reference{Boris Motik, Peter~F. Patel-Schneider, and Bernardo Cuenca~Grau,}{{OWL} 2 web ontology language: Direct semantics,}{{W3C} recommendation, World Wide Web Consortium ({W3C}), October 2009.}\label{w3c:owl2-direct-semantics}
-% 
-   \reference{Boris Motik, Peter~F. Patel-Schneider, and Bijan Parsia,}{{OWL} 2 web ontology language: Structural specification and functional-style syntax,}{{W3C} recommendation, World Wide Web Consortium ({W3C}), October 2009.}\label{w3c:owl2-spec}
-% 
-   \reference{Florian Rabe and Michael Kohlhase,}{A scalable module system,}{{\em Information \& Computation}, pages 1--95, 2013.}\label{RabKoh:WSMSML13}
-% 
-   \reference{D.~Sannella and A.~Tarlecki,}{\em Foundations of Algebraic Specification and Formal Software Development,}{Monographs in Theoretical Computer Science. An EATCS Series, Springer, 2012.}\label{STbook}
-% 
-   \reference{Michael Schneider, Sebastian Rudolph, and Geoff Sutcliffe,}{Modeling in {OWL} 2 without restrictions,}{In Mariano Rodriguez{-}Muro, Simon Jupp, and Kavitha Srinivas, editors, {\em Proceedings of the 10th International Workshop on OWL: Experiences and Directions (OWLED)} 2013, co-located with 10th Extended Semantic Web Conference {(ESWC} 2013), Montpellier, France, May 26-27, 2013., volume 1080 of {\em CEUR Workshop Proceedings}. CEUR-WS.org, 2013.}\label{DBLP:conf/owled/SchneiderRS13}
-% 
-   \reference{Ed~Seidewitz,}{Model Semantics and Mathematical Logic,}{{\em Syntax And Semantics}, pages 1--13, August 2008.}\label{Seidewitz08}
-% 
-   \reference{Heiner Stuckenschmidt, Christine Parent, and Stefano Spaccapietra, editors.,}{\em Modular Ontologies: Concepts, Theories and Techniques for
-   Knowledge Modularization,}{volume 5445 of {\em Lecture Notes in Computer Science,} Springer, 2009.}\label{DBLP:series/lncs/5445}
-% 
-   \reference{MC. Suarez-Figueroa and A.~Gomez-Perez,}{First attempt towards a standard glossary of ontology engineering terminology,}{{\em In: The 8th International Conference on Terminology and Knowledge Engineering}, 18--21 August 2008, Copenhagen, Denmark, 2008.}\label{SuarezFigueroaEtAl:OntologyGlossary2008}
-% 
-   \reference{Geoff Sutcliffe,}{The tptp problem library for automated theorem proving,}{\url{http://www.tptp.org}.}\label{TPTP}
-% 
-   \reference{Geoff Sutcliffe,}{The {TPTP} problem library and associated infrastructure,}{{\em J. Autom. Reasoning}, 43(4):337--362, 2009.}\label{DBLP:journals/jar/Sutcliffe09}
-% 
-   \reference{Geoff Sutcliffe, Christian~B. Suttner, and Theodor Yemenis,}{The {TPTP} problem library,}{In Alan Bundy, editor, {\em Automated Deduction - CADE-12, 12th
-   International Conference on Automated Deduction, Nancy, France, June 26 - July 1, 1994, Proceedings}, volume 814 of {\em Lecture Notes in Computer
-   Science}, pages 252--266. Springer, 1994.}\label{DBLP:conf/cade/SutcliffeSY94}
-% 
-   \reference{ed. Wikimedia~Foundation,}{Linked data,}{{\em from Wikipedia, the free encyclopedia}, 9 November 2011, \url{http://en.wikipedia.org/w/index.php?title=Linked_Data&oldid=459835053}, 2011.}\label{Wikipedia:LinkedData2011}
-% 
-   \reference{Jesper Zedlitz, Jan J{\"o}rke, and Norbert Luttenberger,}{From uml to owl 2.}{In {\em Knowledge Technology}, pages 154--163. Springer, 2012.}\label{zedlitz2012uml}
-% 
-   \reference{A.~Zimmermann, M.~Kr\"otzsch, J.~Euzenat, and P.~Hitzler,}{Formalizing ontology alignment and its operations with category theory,}{{\em In: B. Bennett and C. Fellbaum: Proceedings of the Fourth International Conference on Formal Ontology in Information Systems (FOIS  2006)}, pp. 277--288,Frontiers in Artificial Intelligence and Applications 150, IOS Press 2006.}\label{ZimmermanEtAl06}
-
-%   \reference{EUZENAT, J., and SHVAIKO, P.,}{Ontology Matching,}{Springer, Heidelberg, 2007.}\label{DBLP:books/daglib/0032976}
-%   \reference{GOGUEN, J. A.,}{Data, Schema, Ontology and Logic Integration,}{Logic Journal of the IGPL, Vol. 13: 685-715, 2005.}
-%   \reference{KALFOGLOU, Y. (ed.),}{Cases on Semantic Interoperability for Information Systems Integration: Practices and
-% Applications,}{IGI Global, 2010.}
-%   \reference{KUTZ, O., HOIS, J., BAO, J., and CUENCA GRAU, B. (eds.),}{Modular Ontologies,}{Proc. of the Fourth International
-% Workshop (WoMO 2010), Frontiers in Artificial Intelligence and Applications, Volume 210, IOS Press, 2010.}
-%   \reference{KUTZ, O., MOSSAKOWSKI, T., and LÜCKE, D.,}{Carnap, Goguen, and the Hyperontologies: Logical Pluralism and
-% Heterogeneous Structuring in Ontology Design,}{Logica Universalis, 4(2): 255-333, Special Issue on `Is Logic
-% Universal?', 2010.}
-%   \reference{NEON PROJECT,}{NeOn Book - NeON Methodology in a Nutshell,}{European Commission's Sixth Framework Programme, 2010.  \url{http://www.neon-project.org/nw/NeOn_Book}.}
-%   \reference{STUCKENSCHMIDT, H., PARENT, C., and SPACCAPIETRA, S. (eds.),}{Modular Ontologies: Concepts, Theories and Techniques for Knowledge Modularization,}{Springer, LNCS 5445, 2009.}
-%   \reference{KHAN, Z., and KEET, C.M.,}{Addressing issues in foundational ontology mediation,}{In J.~Filipe and J.~Dietz, editors, {\em 5th International Conference
-%   on Knowledge Engineering and Ontology Development (KEOD'13), Vilamoura, Portugal, 19-22 September}, pages 5--16. SCITEPRESS, 2013}\label{KhanKeet13}
-\end{references}
+\bibliographystyle{plain} 
+\renewcommand{\bibname}{References}
+\label{a:bibliography}
+\bibliography{dol,rfc,tptp,dol-papers}
+\addcontentsline{toc}{chapter}{References}
 
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
