Added specific xmi file name

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3732,7 +3732,7 @@ The ATM example in Fig.~\ref{fig:atm-example} consists of five different
 UML models, which naturally form a network. Coherence of this network is
 expressed as its consistency.  It is assumed that XMI representations of
 the relevant UML models have been stored at
-\url{http://www.example.org/uml/} in a single xmi-file that contains a
+\url{http://www.example.org/uml/} in a single xmi-file \url{http://www.example.org/uml/atm.xmi} that contains a
 \texttt{uml:Model} element for each UML model whose \texttt{xmi:id} has
 a prefix \texttt{xxx} followed by an underscore. \texttt{xxx} is determined
 as follows:\medskip
