Add necessary qualification to interop example

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3185,7 +3185,7 @@ ObjectProperty: isProperPartOf
   Characteristics: Asymmetric  
   SubPropertyOf: isPartOf 
 with translation trans:SROIQtoCL
-then
+then language lang:CommonLogic :
   (if (and (isProperPartOf x y) (isProperPartOf y z)) 
         (isProperPartOf x z))
 \end{lstlisting}
