--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10750,7 +10750,7 @@ library Mereology
 import PropositionalMereology
 
 %% OWL Manchester syntax declaration: 
-language lang:OWL2 logic log:SROIQ syntax ser:OWL2/Manchester           
+language lang:OWL2 logic log:SROIQ serialization ser:OWL2/Manchester           
 
 %% Parthood in SROIQ, as far as easily expressible:
 ontology BasicParthood =                             
@@ -10772,10 +10772,10 @@ end             %% an atom has no proper parts
 interpretation TaxonomyToParthood : Taxonomy to BasicParthood =
   translation trans:PropositionalToSROIQ,
   PT |-> Particular,   S |-> SpaceRegion,
-  T  |-> TimeInterval, A |-> AbstractRegion, %[ and so on ]%
+  T  |-> TimeInterval, A |-> AbstractRegion %[ and so on ]%
 end
 
-logic log:CommonLogic syntax ser:CommonLogic/CLIF
+logic log:CommonLogic serialization ser:CommonLogic/CLIF
                 %% syntax: the Lisp-like CLIF dialect of Common Logic
 
 %% ClassicalExtensionalParthood imports the OWL ontology from above, 
@@ -10786,10 +10786,10 @@ then
   . (forall (X) (if (or (= X S) (= X T) (= X AR) (= X PD))
                     (forall (x y z) (if (and (X x) (X y) (X z))
                                         (and                          
-%% now list all the axioms: 
-	%% antisymmetry:
+// now list all the axioms: 
+	// antisymmetry:
       (if (and (isPartOf x y) (isPartOf y x)) (= x y)) 
-	%% transitivity; not combinable with asymmetry in OWL DL:
+	// transitivity; not combinable with asymmetry in OWL DL:
       (if (and (isProperPartOf x y) (isProperPartOf y z)) (isProperPartOf x z))
       (iff (overlaps x y) (exists (pt) (and (isPartOf pt x) (isPartOf pt y))))
       (iff (isAtomicPartOf x y) (and (isPartOf x y) (Atom x)))
@@ -10797,7 +10797,7 @@ then
            (forall (w) (iff 
 		   	  (overlaps w z) 
 			  (and (overlaps w x) (overlaps w y)))))
- %% existence of the sum:
+ // existence of the sum:
       (exists (s) (sum s x y))                                          
       )))))
 %% definition of fusion	  
