Fix `GalenModule` example
There was a wrongly placed opening angular bracket.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3299,7 +3299,7 @@ ontology myGalen =
   <http://purl.bioontology.org/ontology/GALEN> extract Drugs, Joints, Bodyparts
 end
 
-module myGalenIsAModule : <myGalen of http://purl.bioontology.org/ontology/GALEN> 
+module myGalenIsAModule : myGalen of <http://purl.bioontology.org/ontology/GALEN> 
   for Drugs, Joints, Bodyparts
 end
 \end{lstlisting}
