Fix `PropositionalExamples` example
Changelog:

  - move `library` declaration to be in the right place
  - `syntax` to `serialization`
  - fix serialization declaration: Prop -> Propositional

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10609,10 +10609,10 @@ combine NetworkElements  & Alignments, Publications \\\hline
          ser:   <http://purl.net/DOL/serializations/> )%
                 %% ... and serializations
 
-%% non-standard serialization built into Hets: 
-logic log:Propositional syntax ser:Prop/Hets       
-
 library PropositionalExamples
+
+%% non-standard serialization built into Hets: 
+logic log:Propositional serialization ser:Propositional/Hets       
 
 oms Consistent = %consistent
   props A, B
