Fix `PropositionalMereology` example

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10632,11 +10632,12 @@ end
 entailment Ent = SingleModel entails { . not ( A=>B ) }
 end
 
+%% repeat prefix declarations from above
 
 library PropositionalMereology
 
 %% non-standard serialization built into Hets: 
-logic log:Propositional syntax ser:Prop/Hets       
+logic log:Propositional serialzation ser:Propositional/Hets
 
 %% basic taxonomic information about mereology reused from DOLCE:
 ontology Taxonomy = %consistent
